--- a/pages/boards/new/Board.module.css
+++ b/pages/boards/new/Board.module.css
@@ -9,7 +9,9 @@
 .board_box {
     width: 100%;
     height: 1847px;
-    padding-top: 40px;
+    padding: 40px 0;
+    font-family: 'Noto Sans CJK KR';
+    
 }
 .board_box > .board {
     width: 1200px;
@@ -188,7 +190,6 @@
 .flie_box {
     width: 282px;
     height: 118px;
-    background: red;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -236,7 +237,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background: red;
 }
 .main_set_content > input {
     width: 24px;
@@ -249,6 +249,22 @@
     line-height: 23.68px;
 }
 .main_set_content input[type="radio"]:checked {
-   
     background-color: red;
+}
+.insert_btn_box {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 150px;
+}
+.insert_btn_box > button {
+    width: 179px;
+    height: 52px;
+    padding: 14px 60px;
+    font-weight: 500;
+    line-height: 23.68px;
+    background: rgba(255, 214, 0, 1);
+    border: none;
 }
