--- a/pages/boards/new/Board.module.css
+++ b/pages/boards/new/Board.module.css
@@ -8,8 +8,8 @@
 /* 끝 */
 .board_box {
     width: 100%;
-    height: 1847px;
-    padding: 40px 0;
+    height: 100%;
+    padding: 80px 0 100px;
     font-family: 'Noto Sans CJK KR';
     
 }
@@ -18,7 +18,7 @@
     height: 100%;
     margin: 0 auto;
     background-color: #FFF;
-    box-shadow: 3px 3px 3px 3px gray;
+    box-shadow: 0px 0px 10px gray;
     
 }
 .board_content {
@@ -258,6 +258,7 @@
     flex-direction: row;
     justify-content: center;
     padding-top: 150px;
+    padding-bottom: 100px;
 }
 .insert_btn_box > button {
     width: 179px;
