--- a/src/components/units/board/writte/Board.module.css
+++ b/src/components/units/board/writte/Board.module.css
@@ -223,7 +223,7 @@
 .flie_box > .file_box_upload > input {
     width: 78px;
     height: 78px;
-    background: url("../../../public/upload.png") no-repeat;
+    background: url("/public/upload.png") no-repeat;
     overflow: hidden;
 }
 .flie_box > .file_box_upload > input[type="file"] {
