--- a/src/components/units/board/detail/detail.module.css
+++ b/src/components/units/board/detail/detail.module.css
@@ -160,3 +160,11 @@
     flex-direction: row;
     justify-content: space-between;
 }
+.btn_list {
+    width: 100%;
+    height: 100%;
+    padding-top: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
