--- a/src/components/units/board/detail/detail.module.css
+++ b/src/components/units/board/detail/detail.module.css
@@ -1,19 +1,21 @@
-.board_box {
+.board {
     width: 100%;
     height: 100%;
     padding: 80px 0 100px;
 }
-.board {
-    width: 1200px;
-    height: 100%;
-    margin: 0 auto;
-    background-color: #FFF;
-    box-shadow: 0px 0px 10px gray;
-}
-.board > div {
+.board_box {
     width: 100%;
     height: 100%;
-    padding: 80px 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.board_box_content {
+    width: 1200px;
+    height: 100%;
+    box-shadow: 0px 0px 10px gray;
+    padding: 80px;
+    margin: 0 auto;
 }
 .user_box {
     width: 100%;
@@ -161,10 +163,22 @@
     justify-content: space-between;
 }
 .btn_list {
-    width: 100%;
+    width: 1200px;
     height: 100%;
     padding-top: 80px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 0 auto;
+}
+.btn_list > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-basis: 600px;
+}
+.btn_list > div > button {
+    padding: 14px 60px;
+    border: 1px solid rgba(189, 189, 189, 1);
+    background: #FFF;
 }
