--- a/src/components/units/board/writte/Board.module.css
+++ b/src/components/units/board/writte/Board.module.css
@@ -168,6 +168,7 @@
     line-height: 23.68px;
     font-weight: 500;
     border: none;
+    cursor: pointer;
 }
 .address_box_input {
     display: flex;
